2003-09-14  Bruno Haible  <bruno@clisp.org>

	* envsubst.c (main): Remove stdout write error check, now done in
	close_stdout.

2003-09-18  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (EXTRA_DIST): Add gettext.sh.
	Reported by Guido Flohr.

2003-09-13  Bruno Haible  <bruno@clisp.org>

	* envsubst.c: New file.
	* gettext.sh: New file.
	* Makefile.am (bin_PROGRAMS): Add envsubst.
	(envsubst_SOURCES, envsubst_CFLAGS, envsubst_LDFLAGS): New variables.
	(all-local): Depend on gettext.sh.
	(install-data-local, uninstall-local): New rules, for gettext.sh.
	* Makefile.msvc (PROGRAMS): Add envsubst.exe.
	(envsubst_OBJECTS): New variable.
	(envsubst.obj, envsubst.exe): New rules.
	(install): Install also envsubst.exe and gettext.sh.
	(uninstall): Uninstall also envsubst.exe and gettext.sh.
	* Makefile.vms (PROGRAMS): Add envsubst.exe.
	(envsubst_OBJECTS): New variable.
	(envsubst.obj, envsubst.exe): New rules.
	(install): Install also envsubst.exe and gettext.sh.
	(uninstall): Uninstall also envsubst.exe and gettext.sh.

2003-09-13  Bruno Haible  <bruno@clisp.org>

	Fix behaviour of "<program> --help > /dev/full".
	* gettext.c: Include closeout.h.
	(main): Register close_stdout for execution at program exit.
	* ngettext.c: Include closeout.h.
	(main): Register close_stdout for execution at program exit.

2003-06-08  Bruno Haible  <bruno@clisp.org>

	* Makefile.vms (LDADD): Take options from .opt files.
	(libiconv.opt): New rule.
	(gettext.exe, ngettext.exe): Depend on it.
	Reported by Jouk Jansen <joukj@hrem.stm.tudelft.nl>.

2003-05-22  Bruno Haible  <bruno@clisp.org>

	* gettext-0.12.1 released.

2003-05-18  Bruno Haible  <bruno@clisp.org>

	* Makefile.msvc (DEBUGFLAGS): New variable.
	(gettext.exe, ngettext.exe): Use it, and MFLAGS too.

2003-05-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.12 released.

2003-05-17  Bruno Haible  <bruno@clisp.org>

	* Makefile.msvc (libdir, IIlibdir): New variables.